k8s/apps/learning-react/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-react
  labels:
    app: learning-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learning-react
  template:
    metadata:
      labels:
        app: learning-react
    spec:
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: learning-react
          image: ghcr.io/upayanmazumder/devjourney/learning-react:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 300m
              memory: 384Mi
